# sakuraParisPythonAPI

./: LICENSE  README.md  pyvenv.cfg  requirements.txt  run.py  setup.cfg
sakuraParisAPI/: entryClass.py  pyproject.toml  query.py  sakura.py  setup.cfg
sakuraParisAPI/fetch/: entryClass.py  query.py
tests/: test.py
