[metadata]

name = sakuraParisAPI
version = 0.0.6
author = Anson Xu
author_email = AXu2@scu.edu
description = for accessing the Sakura Paris dictionary API 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shur1m/sakuraParisPythonAPI

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    requests
    bs4